<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lin_send_fun"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="visible">

        <include layout="@layout/file_send_fun_layout" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lin_send_fun">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="@dimen/view_10dp">

                <TextView
                    android:id="@+id/id_connect_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fragment_title_connect"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"
                   />

                <TextView
                    android:id="@+id/id_application_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fragment_title_application"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/id_music_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fragment_title_music"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/id_movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fragment_title_movie"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/id_file_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fragment_title_fileExplore"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/id_history_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fragment_title_download"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/id_cursor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <android.support.v4.view.ViewPager
                android:id="@+id/id_view_pager"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:flipInterval="30"
                android:persistentDrawingCache="animation" />
        </LinearLayout>
        <ImageView
            android:id="@+id/img_connect"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shadow" />
    </RelativeLayout>

</RelativeLayout>